Fix horizontal scrolling in DataSelector

--- a/src/nova/trame/view/theme/assets/core_style.scss
+++ b/src/nova/trame/view/theme/assets/core_style.scss
@@ -50,6 +50,14 @@ html {
         & > .v-list-group > .v-list-item {
             padding-left: 0 !important;
         }
+
+        .v-list-item__content, .v-list-item-title {
+            overflow: visible;
+        }
+
+        .v-list-item-title span {
+            padding-right: 1em;
+        }
     }
 }
 
@@ -74,14 +82,21 @@ html {
         }
     }
 
-    .rgCell label {
-        cursor: pointer;
+    .inner-content-table {
+        overflow-x: auto;
     }
 
-    .rv-row-text {
-        overflow: hidden;
-        text-overflow: ellipsis;
-        white-space: nowrap;
+    .vertical-inner, .content-wrapper, revogr-overlay-selection {
+        width: fit-content;
+    }
+
+    .rgCell {
+        width: fit-content !important;
+
+        label {
+            cursor: pointer;
+            width: fit-content;
+        }
     }
 
     .header-content {
